--- a/Examples of AI.html
+++ b/Examples of AI.html
@@ -8,7 +8,7 @@
 <h1 style="font-size: 300;">Examples of Artificial Intelligence</h1>
 <h2>This is links</h2>
 <ul>
-    <li><a href="mainpage.html">AI</a></li>
+    <li><a href="index.html">AI</a></li>
     <li><a href="image of AI.html">image of Artificial Intelligence</a></li>
     <li> <a href="Examples of AI.html  "> Examples of Artificial Intelligence</a></li>
     <li><a href="goals of AI.html">goal of Artificial Intelligence</a></li>
