--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p style="font-size: 300;">This is links</p>
 <ul>
     <li><a href="index.html">AI</a></li>
-    <li><a href="image of AI.html">image of Artificial Intelligence</a></li>
+    <li><a href="image of artificial intelligence.html">image of Artificial Intelligence</a></li>
     <li> <a href="Examples of AI.html  "> Examples of Artificial Intelligence</a></li>
     <li><a href="goals of AI.html">goal of Artificial Intelligence</a></li>
     <li><a href="pros and cons of AI.html">pros and cons of AI</a></li>
