Update Examples of AI.html

--- a/Examples of AI.html
+++ b/Examples of AI.html
@@ -9,7 +9,7 @@
 <h2>This is links</h2>
 <ul>
     <li><a href="index.html">AI</a></li>
-    <li><a href="image of AI.html">image of Artificial Intelligence</a></li>
+    <li><a href="image of Artificial Intelligence.html">image of Artificial Intelligence</a></li>
     <li> <a href="Examples of AI.html  "> Examples of Artificial Intelligence</a></li>
     <li><a href="goals of AI.html">goal of Artificial Intelligence</a></li>
     <li><a href="pros and cons of AI.html">pros and cons of AI</a></li>
